# abcBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: config.py  main.py
bot/db/: base.py  engine.py  session.py
bot/domain/order_states/: __init__.py  base.py  cancelled.py  delivered.py  machine.py  new.py  paid.py  shipped.py
bot/filters/: admin.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  categories.py  menu.py  orders.py  products.py
bot/handlers/user/: cart.py  catalog.py  checkout.py  menu.py  orders.py  start.py
bot/keyboards/: callbacks.py
bot/keyboards/admin/: catalog.py  main_menu.py  orders.py
bot/keyboards/user/: cart.py  catalog.py  checkout.py  main_menu.py  orders.py
bot/middlewares/: auth_middleware.py  db_middleware.py
bot/models/: __init__.py  cart_item.py  category.py  order.py  product.py  user.py
bot/repositories/: base.py  cart_repository.py  category_repository.py  order_repository.py  product_repository.py  user_repository.py
bot/services/: admin_catalog_service.py  admin_order_service.py  cart_service.py  catalog_service.py  order_builder.py  order_service.py  product_builder.py
bot/services/commands/: __init__.py  base.py  history.py  order_commands.py
bot/services/discounts/: __init__.py  base.py  base_total.py  decorators.py  promo_codes.py
bot/services/events/: __init__.py  base.py  bus.py
bot/services/events/observers/: __init__.py  admin_notifier.py  logging.py  user_notifier.py
bot/services/payment/: __init__.py  base.py  factory.py  fake.py  yookassa_strategy.py
bot/services/payment/_mock_sdk/: __init__.py  client.py  types.py
bot/states/: admin.py  checkout.py
bot/utils/: logger.py  pagination.py
migrations/: env.py
tests/: test_admin_filter.py  test_commands.py  test_discounts.py  test_event_bus.py  test_order_builder.py  test_order_states.py  test_payment_strategies.py  test_product_builder.py  test_smoke.py  test_yookassa_strategy.py
