[project]
name = "abcbot"
version = "0.1.0"
description = "Telegram shop bot on aiogram for learning design patterns"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-специфичные
]
ignore = [
    "E501",  # длина строки — форматтер сам следит
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

[tool.poe.tasks]
bot = "python -m bot.main"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
typecheck = "mypy ."
test = "pytest"
check = ["lint", "typecheck", "test"]
pre-commit = "pre-commit run --all-files"
