[project]
name = "abcbot"
version = "0.1.0"
description = "Telegram shop bot on aiogram for learning design patterns"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "poethepoet>=0.44.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF",
]
ignore = [
    "E501",    # длина строки — форматтер сам следит
    "RUF001",  # ambiguous unicode в строках — у нас проект на русском
    "RUF002",  # ambiguous unicode в docstring — у нас docstring на русском
    "RUF003",  # ambiguous unicode в комментариях — у нас комментарии на русском
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

[tool.poe.tasks]
bot = "python -m bot.main"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
typecheck = "mypy ."
test = "pytest"
check = ["lint", "typecheck", "test"]
pre-commit = "pre-commit run --all-files"

# Docker — инфраструктура для dev
infra-up = "docker compose up -d"
infra-down = "docker compose down"
infra-logs = "docker compose logs -f"
infra-reset = "docker compose down -v"

# Docker — полный прод-подобный запуск локально
prod-up = "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build"
prod-down = "docker compose -f docker-compose.yml -f docker-compose.prod.yml down"

migrate = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
migrate-history = "alembic history --verbose"
migrate-current = "alembic current --verbose"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.poe.tasks.migrate-new]
cmd = "alembic revision --autogenerate -m \"$message\""
args = [{ name = "message", positional = true, required = true }]
